# pentachoron

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  TODO  configure.ac
cmake/Modules/: FindAntTweakBar.cmake  FindFLTK.cmake  FindGLEW.cmake  FindOGLP.cmake
data/: config.yaml  scene.yaml
data/kernels/: blur.cl  composition.cl  fft.cl  filters.cl  shadow.cl
data/shaders/: blendglow.txt  composition.txt  font.fs  font.vs  getpos.txt  lightcull.txt  lightculling.txt  lightpass.txt  minmaxdepth.txt  passthrough.vs  shadowpass.txt  windowgrid.txt
data/shaders/bbox/: fshader.txt  vshader.txt
data/shaders/composition/: composition.txt  getpos.txt  header.txt  light.txt  parameter.txt  shadow.txt  sky.txt  specular.txt
data/shaders/finalpass/: compose.txt  depth.txt  diffuse.txt  edge.txt  glow.txt  luminance.txt  monochrome.txt  normal.txt  passthrough.txt  position.txt  shadowmap.txt  shared.txt
data/shaders/gbuffer/: depthonly.txt  fshader.txt  sraa.txt  transparency.txt  vshader.txt
data/shaders/gbuffer/tess/: control.txt  evaluation.txt  fshader.txt  quadeval.txt  triangleeval.txt  vshader.txt
data/shaders/glow/: blend.txt  hblur.txt  vblur.txt
data/shaders/opacity/: fshader.txt  vshader.txt
data/shaders/postprocess/: compose.txt  depth.txt  edge.txt  glow.txt  normal.txt  passthrough.txt  shadowmap.txt
data/shaders/shadowmap/: fshader.txt  hblur.txt  vblur.txt  vshader.txt
data/shaders/shadowmap/tess/: evaluation.txt  quadeval.txt  triangleeval.txt  vshader.txt
include/: camera.h  common.h  composition.h  config.h  culling.h  filters.h  finalpass.h  gbuffer.h  geometry.h  glow.h  interface.h  light.h  opacitypass.h  parameter.h  postprocess.h  renderer.h  shadow.h  shadowmap.h  shadowpass.h  tiger.h  windowgrid.h  yaml.h
include/font/: all.h  font.h  freetype.h
include/model/: material.h  mesh.h  model.h
include/scene/: material.h  mesh.h  scene.h
libs/libpchm/: CMakeLists.txt  edge.cpp  import.cpp  mesh.cpp  patches.cpp  pchm.cpp  pchm.h
libs/libpchm/internal/: face.h  mesh.h  patch.h
src/: CMakeLists.txt  Doxyfile.in  Makefile.am  camera.cpp  common.cpp  composition.cpp  culling.cpp  filters.cpp  finalpass.cpp  gbuffer.cpp  geometry.cpp  glow.cpp  interface.cpp  light.cpp  main.cpp  oglp.cpp  opacitypass.cpp  postprocess.cpp  renderer.cpp  shadowmap.cpp  shadowpass.cpp  tiger.cpp  tiger_sboxes.cpp  windowgrid.cpp
src/font/: font.cpp  freetype.cpp
src/model/: material.cpp  mesh.cpp  model.cpp
src/scene/: material.cpp  mesh.cpp  scene.cpp
utils/conv2pchm/: .gitignore  CMakeLists.txt  common.h  export.cpp  export.h  glwindow.cpp  glwindow.h  main.cpp  mesh.cpp  mesh.h
utils/genpatches/: CMakeLists.txt  common.h  edge.h  export.cpp  face.cpp  import.cpp  main.cpp  mesh.cpp  mesh.h
