bin_PROGRAMS = DRE
DRE_CXXFLAGS = -I $(top_srcdir)/include
DRE_SOURCES = font/font.cpp font/freetype.cpp model/model.cpp model/mesh.cpp model/material.cpp windowgrid.cpp main.cpp common.cpp camera.cpp composition.cpp filters.cpp finalpass.cpp gbuffer.cpp geometry.cpp interface.cpp renderer.cpp shadowmap.cpp culling.cpp glow.cpp light.cpp
DRE_LDADD = $(DEPS_LIBS)
DRE_CPPFLAGS = $(DEPS_CFLAGS)
