bin_PROGRAMS = pentachoron
pentachoron_CXXFLAGS = -I $(top_srcdir)/include
pentachoron_SOURCES = font/font.cpp font/freetype.cpp model/model.cpp model/mesh.cpp model/material.cpp windowgrid.cpp main.cpp common.cpp camera.cpp composition.cpp postprocess.cpp gbuffer.cpp geometry.cpp interface.cpp renderer.cpp shadowmap.cpp culling.cpp glow.cpp light.cpp tiger.cpp tiger_sboxes.cpp
pentachoron_LDADD = $(DEPS_LIBS)
pentachoron_CPPFLAGS = $(DEPS_CFLAGS)
